--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </li>
                 </ul>
                 <ul class="head_2">
-                    <li><a><img src="https://chosunboutique.com/static/assets/images/logo.png"></a></li>
+                    <li><a>Joseon Buttikkeu</a></li>
                 </ul>
             </div>
         </div>
